...
  final TextEditingController dobController = TextEditingController();
  final TextEditingController emailController = TextEditingController();
  final TextEditingController phoneNumberController = TextEditingController();

  String? gender;
  String? country;
  final List<String> countries = ['USA', 'India', 'UK', 'Canada', 'Australia'];

  AccountController({required this.userId});

  Future<void> loadUserData() async {
    try {
      final userDoc = await _firestore.collection('users').doc(userId).get();
...
